2012-11-14  Tiancheng Jiang  <tijiang@rim.com>

        [BlackBerry] Update BB10 form theme.
        https://bugs.webkit.org/show_bug.cgi?id=100760

        Reviewed by Rob Buis.

        RIM PR 225755
        Internally Reviewed by Eli Fidler.
        Update checkbox, radio and menulist button style. Adjust border width
        and line height.

        * platform/blackberry/RenderThemeBlackBerry.cpp:
        (WebCore::RenderThemeBlackBerry::adjustMenuListButtonStyle):
        * platform/blackberry/RenderThemeBlackBerry.h:
        (RenderThemeBlackBerry):

2012-11-14  Erik Arvidsson  <arv@chromium.org>

        Update DOMException name: InvalidModificationError
        https://bugs.webkit.org/show_bug.cgi?id=102281

        Reviewed by Kentaro Hara.

        Patch 13 of 25 to update DOMException name to match the spec and Firefox.

        DOMExcecption INVALID_MODIFICATION_ERR is not used in our code.

        * dom/DOMCoreException.cpp:

2012-11-14  Adam Barth  <abarth@webkit.org>

        document variable in Document::axObjectCache is actually the topDocument
        https://bugs.webkit.org/show_bug.cgi?id=101966

        Reviewed by Chris Fleizach.

        Name change requested by Darin Adler.

        * dom/Document.cpp:
        (WebCore::Document::axObjectCache):

2012-11-14  Joseph Pecoraro  <pecoraro@apple.com>

        [CF]: XMLHttpRequest "timeout" events firing as "error" events
        https://bugs.webkit.org/show_bug.cgi?id=102271

        Reviewed by David Kilzer.

        Initialize the tiemout flag if the error results from a timeout
        in the USE(CFNETWORK) cases.

        No new tests. This is covered by http/tests/xmlhttprequest/timeout
        tests on ports that USE(CFNETWORK).

        * platform/network/cf/ResourceErrorCF.cpp:
        (WebCore::ResourceError::ResourceError):
        * platform/network/mac/ResourceErrorMac.mm:
        (WebCore::ResourceError::ResourceError):

2012-11-14  Nico Weber  <thakis@chromium.org>
